# rust_project

./: .gitignore  Cargo.toml  README.md  config.toml
src/: 01_variables.rs  02_data_types.rs  03_functions.rs  04_flow_control.rs  06_structs.rs  07_enums_patterns.rs  08_collections.rs  09_modules.rs  10_error_handling.rs  11_generics.rs  12_traits.rs  13_lifetimes.rs  lib.rs  main.rs  models.rs  study_14.rs  test.rs
src/models/: enums.rs  flink.rs  structs.rs
src/study/: enums.rs  errors_study.rs  future_study.rs  hashmap_study.rs  mod_study.rs  ownership.rs  struts.rs  study_14.rs  study_15.rs
tests/: async_study.rs  awc_study.rs  boxed_study.rs  channels_study.rs  deref_study.rs  intergeration_test.rs  rc_study.rs  refcell_study.rs  reqwest_study.rs  thread_study.rs  tuple_study.rs
