[package]
name = "rust_project"
version = "0.1.0"
edition = "2024"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "ownership"
path = "src/study/ownership.rs"

[[bin]]
name = "struts"
path = "src/study/struts.rs"

[[bin]]
name = "enums"
path = "src/study/enums.rs"

[[bin]]
name = "mod_study"
path = "src/study/mod_study.rs"

[[bin]]
name = "hashmap_study"
path = "src/study/hashmap_study.rs"
[[bin]]
name = "errors_study"
path = "src/study/errors_study.rs"

[[bin]]
name = "future_study"
path = "src/study/future_study.rs"
#[[bin]]
#name = "variables"
#path = "src/01_variables.rs"
#
#[[bin]]
#name = "data_types"
#path = "src/02_data_types.rs"
#
#[[bin]]
#name = "functions"
#path = "src/03_functions.rs"
#
#[[bin]]
#name = "flow_control"
#path = "src/04_flow_control.rs"
#
#[[bin]]
#name = "ownership"
#path = "src/05_ownership.rs"
#
#[[bin]]
#name = "structs"
#path = "src/06_structs.rs"
#
#[[bin]]
#name = "enums_patterns"
#path = "src/07_enums_patterns.rs"
#
#[[bin]]
#name = "collections"
#path = "src/08_collections.rs"
#
#[[bin]]
#name = "modules"
#path = "src/09_modules.rs"
#
#[[bin]]
#name = "error_handling"
#path = "src/10_error_handling.rs"
#
#[[bin]]
#name = "generics"
#path = "src/11_generics.rs"
#
#[[bin]]
#name = "traits"
#path = "src/12_traits.rs"
#
#[[bin]]
#name = "lifetimes"
#path = "src/13_lifetimes.rs"

[[bin]]
name = "study_14"
path = "src/study/study_14.rs"

[[bin]]
name = "study_15"
path = "src/study/study_15.rs"


[dependencies]
ferris-says = "0.3.1"
rand="0.9.1"
trpl = "0.3.0"
csv = "1.4.0"
serde = { version = "1.0.228",features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
#awc = "3.8.1"
#actix-rt = "2.11.0"
reqwest = { version = "0.13.1",features = ["blocking","json"] }
tokio = { version = "1.49.0",features = ["macros"] }
futures = "0.3.31"



#[profile.release]
#panic = "abort"