[package]
name = "rust_project"
version = "0.1.0"
edition = "2024"

[dependencies]
#ferris-says = "0.3.1"
#csv = "1.4.0"
rand="0.9.1"
trpl = "0.3.0"
serde = { version = "1.0.228",features = ["derive"] }
serde_json = "1.0.149"
base64 = "0.22.1"
reqwest = { version = "0.13.1",features = ["blocking","json"] }
tokio = { version = "1.49.0",features = ["macros"] }
futures = "0.3.31"
thiserror = "2.0.18"
actix-rt = "2.11.0"
awc = "3.8.1"
toml = "0.9.11"



#[profile.release]
#panic = "abort"